# python-template

./: .env.sample  .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
config/: settings.toml
requirements/: dev-requirements.txt  notebooks-requirements.txt  requirements.txt  test-requirements.txt
scripts/: branch_names.sh
template/: __init__.py  config.py
template/cli/: cli.py
tests/: test_sample.py
{{ cookiecutter.project_name }}/: .env.sample  .pre-commit-config.yaml  Makefile  pyproject.toml
{{ cookiecutter.project_name }}/config/: settings.toml
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/cli/: cli.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
